--- a/seed-project/views/index.hbs
+++ b/seed-project/views/index.hbs
@@ -4,21 +4,23 @@
     <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title>Angular Messenger</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendors/styles/font-awesome.min.css">
+    <link rel="stylesheet" href="/vendors/styles/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
   </head>
   <body>
     <my-app>Loading...</my-app>
 
-    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script> 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
+    <script src="/vendors/scripts/jquery-3.3.1.min.js"></script> 
+    <script src="/vendors/scripts/popper.min.js"></script> 
+    <script src="/vendors/scripts/bootstrap.min.js"></script> 
+
+    <!-- Optional JavaScript -->
     <script src="/js/app/bundle.js"></script>
   </body>
 </html>
