--- a/seed-project/assets/app/app.component.html
+++ b/seed-project/assets/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <app-message-input></app-message-input>
-    <app-message-list></app-message-list>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
 </div>
